--- a/front/app/views/main.html
+++ b/front/app/views/main.html
@@ -1,8 +1,38 @@
 <div class="jumbotron">
   <h1>Wybierz alkohol</h1>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    <div class="row">
+      <div class="col-xs-6 col-md-3">
+        <a ng-click="pickItem($event)" class="thumbnail">
+          <img src="images/1.png" alt="...">
+        </a>
+      </div>
+      <div class="col-xs-6 col-md-3">
+        <a ng-click="pickItem($event)" class="thumbnail">
+          <img src="images/2.png" alt="...">
+        </a>
+      </div>
+      <div class="col-xs-6 col-md-3">
+        <a ng-click="pickItem($event)" class="thumbnail">
+          <img src="images/3.png" alt="...">
+        </a>
+      </div>
+      <div class="col-xs-6 col-md-3">
+        <a ng-click="pickItem($event)" class="thumbnail">
+          <img src="images/IMAG1198.jpg" alt="...">
+        </a>
+      </div>
+      <div class="col-xs-6 col-md-3">
+        <a ng-click="pickItem($event)" class="thumbnail">
+          <img src="images/IMAG1186.jpg" alt="...">
+        </a>
+      </div>
+      <div class="col-xs-6 col-md-3">
+        <a ng-click="pickItem($event)" class="thumbnail">
+          <img src="images/IMAG1190.jpg" alt="...">
+        </a>
+      </div>
+    </div>
   </p>
   <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
