--- a/front/app/views/main.html
+++ b/front/app/views/main.html
@@ -34,7 +34,7 @@
       </div>
     </div>
   </p>
-  <p><a ng-click="applyChoice()"class="btn btn-lg btn-success" ng-href="#/">
+  <p><a ng-href="#/drinks" ng-click="applyChoice()" class="btn btn-lg btn-success">
       Dawaj drina!
       <span class="glyphicon glyphicon-ok"></span></a>
   </p>
