--- a/front/app/styles/main.scss
+++ b/front/app/styles/main.scss
@@ -12,6 +12,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 
 body {
   padding: 0;
+  background-color: #3F4545;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -88,4 +89,9 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+#footer
+{
+    color: white;
+	text-align: center;
 }
