--- a/front/app/views/drinks.html
+++ b/front/app/views/drinks.html
@@ -1,10 +1,12 @@
 <div class="jumbotron">
   <h1>To możesz zrobić:</h1>
 <ul class="drinks">
-  <li ng-repeat="x in drins">
-    <span>{{x.name}}</span>
-    <p>{{x.icon}}</p>
-  </li>
+   <p><li> <img class="drinky" src="images/1.png"> </img></li>CYTRYNA</p>
+   <p><li> <img class="drinky" src="images/martini.png"> </img></li>MARTINI</p>
+   <p><li> <img class="drinky" src="images/wino.png"> </img></li>WINO</p>
+   <p><li> <img class="drinky" src="images/wodka.png"> </img></li>WODKA</p>
+   <p><li> <img class="drinky" src="images/shacker.png"> </img></li>SHACKER</p>
+  
 </ul>
 <p><a ng-href="#/main" class="btn btn-lg btn-danger">
     Cofnij!
