--- a/front/app/views/drinks.html
+++ b/front/app/views/drinks.html
@@ -1,10 +1,10 @@
 <div class="jumbotron">
   <h1>To możesz zrobić:</h1>
 <ul class="drinks">
-   <p><li> <img class="drinky" src="images/1.png"> </img></li>CYTRYNA</p>
+   <p><li> <img class="drinky" src="images/1.png"> </img></li>CYTRYNANKA</p>
    <p><li> <img class="drinky" src="images/martini.png"> </img></li>MARTINI</p>
-   <p><li> <img class="drinky" src="images/wino.png"> </img></li>WINO</p>
-   <p><li> <img class="drinky" src="images/wodka.png"> </img></li>WODKA</p>
+   <p><li> <img class="drinky" src="images/wino.png"> </img></li>WINIACZ</p>
+   <p><li> <img class="drinky" src="images/wodka.png"> </img></li>SHOCKO-CZOKO</p>
    <p><li> <img class="drinky" src="images/shacker.png"> </img></li>SHACKER</p>
   
 </ul>
